fix: ui issues fixed and Scrollbar is changed to gradient

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -18,17 +18,18 @@ body {
   background-color: #f1f4f5;
   &::-webkit-scrollbar,
   ::-webkit-scrollbar {
-    width: 18px;
+    width: 10px;
     &-track {
       background-color: transparent;
       // box-shadow: inset 0 0 5px #00a4b7;
     }
     &-thumb {
-      width: 18px;
+      width: 10px;
       border-radius: 13px;
       background-clip: padding-box;
-      border: 5px solid transparent;
-      background-color: #00a4b7;
+      border: 2px solid transparent;
+      // background-color: #00a4b7;
+      background: -webkit-linear-gradient(#359cbb, #64c299);
     }
   }
 }
